--- a/src/App.scss
+++ b/src/App.scss
@@ -519,7 +519,7 @@ h5 {
         text-shadow: 2px 2px 15px #000;
     }
 
-    .textcopy strong {
+    .text strong {
         font-weight: var(--fw-bold);
         text-shadow: 2px 3px 1px #000;
         color: var(--color-primary);
