--- a/src/App.scss
+++ b/src/App.scss
@@ -297,8 +297,7 @@ h5 {
 
 // BASE & SIDEBAR
 .App {
-    background-image: url(./assets/images/bgs/contemp-comp-jedit.jpg);
-    background-image: linear-gradient(180deg, #361b1b9e 28%, #1d100ac2 100%), url(/static/media/contemp-comp-jedit.ec3a22fa.jpg);
+    background-image: linear-gradient(180deg, #361b1b9e 28%, #1d100ac2 100%), url(./assets/images/bgs/contemp-comp-jedit2.jpg);
     background-size: cover;
     background-color: #fff;
     background-position: left bottom;
