--- a/src/App.scss
+++ b/src/App.scss
@@ -539,6 +539,8 @@ h5 {
     text-decoration: none;
     text-transform: capitalize;
     text-shadow: 0px 2px 3px #000;
+    border: none;
+    background-color: transparent;
 }
 
 .dropdown-converter .dropdown-toggle-btn {
