--- a/src/App.scss
+++ b/src/App.scss
@@ -302,6 +302,7 @@ h5 {
     background-color: #fff;
     background-position: left bottom;
     background-attachment: fixed;
+    height: auto;
 }
 
 .app__fadebg {
