fix unfixed sidebar on long pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -302,7 +302,7 @@ h5 {
     background-color: #fff;
     background-position: left bottom;
     background-attachment: fixed;
-    height: auto;
+    height: 100vh;
 }
 
 .app__fadebg {
