--- a/src/App.scss
+++ b/src/App.scss
@@ -297,7 +297,7 @@ h5 {
 
 // BASE & SIDEBAR
 .App {
-    background-image: linear-gradient(180deg, #361b1b9e 28%, #1d100ac2 100%), url(./assets/images/bgs/contemp-comp-gtm.jpg);
+    background-image: linear-gradient(180deg, rgba(33, 16, 16, 0.62) 28%,rgba(12, 7, 5, 0.76) 100%), url(./assets/images/bgs/contemp-comp-gtm.jpg);
     background-size: cover;
     background-color: #fff;
     background-position: left bottom;
