--- a/src/App.scss
+++ b/src/App.scss
@@ -630,7 +630,12 @@ h5 {
     }
 
     .text.para {
-        max-width: 87rem;
+        line-height: 1.8;
+    }
+
+    .home__aboutme {
+        margin-top: 1rem;
+        max-width: 52rem;
     }
 
     .text strong {
