move project roles to left side on smaller screens for better readability

--- a/src/App.scss
+++ b/src/App.scss
@@ -1084,7 +1084,7 @@ h5 {
     }
     
     h4.card--project__role {
-        align-self: flex-end;
+        align-self: flex-start;
     }
     
     .page--listprojects .card--project .cp__middlerow,
